@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.31 2007/08/20 09:16:18 deraugla Exp $
+# $Id: Makefile,v 1.32 2007/08/31 10:41:10 deraugla Exp $
 
 include config/Makefile
 
@@ -9,6 +9,9 @@ SHELL=/bin/sh
 COLD_FILES=ocaml_src/main/argl.ml ocaml_src/main/ast2pt.ml ocaml_src/main/ast2pt.mli ocaml_src/main/mLast.mli ocaml_src/main/pcaml.ml ocaml_src/main/pcaml.mli ocaml_src/main/quotation.ml ocaml_src/main/quotation.mli ocaml_src/main/reloc.ml ocaml_src/main/reloc.mli ocaml_src/main/spretty.ml ocaml_src/main/spretty.mli ocaml_src/lib/extfun.ml ocaml_src/lib/extfun.mli ocaml_src/lib/fstream.ml ocaml_src/lib/fstream.mli ocaml_src/lib/gramext.ml ocaml_src/lib/gramext.mli ocaml_src/lib/grammar.ml ocaml_src/lib/grammar.mli ocaml_src/lib/plexer.ml ocaml_src/lib/plexer.mli ocaml_src/lib/stdpp.ml ocaml_src/lib/stdpp.mli ocaml_src/lib/token.ml ocaml_src/lib/token.mli ocaml_src/meta/pa_extend.ml ocaml_src/meta/pa_extend_m.ml ocaml_src/meta/pa_macro.ml ocaml_src/meta/pa_r.ml ocaml_src/meta/pa_rp.ml ocaml_src/meta/pr_dump.ml ocaml_src/meta/q_MLast.ml ocaml_src/odyl/odyl_main.ml ocaml_src/odyl/odyl_main.mli ocaml_src/odyl/odyl.ml
 PR_O=pr_o.cmo
 DIFF_OPT=
+# For possible installation in a fake root directory
+# by "make install DESTDIR=..."
+DESTDIR=
 
 all: out
 
@@ -41,10 +44,12 @@ depend:
 	for i in $(DIRS) compile; do (cd $$i; $(MAKE) depend); done
 
 install:
-	@test ! -d "$(LIBDIR)/$(NAME)/Camlp4Parsers" || \
-	 (/bin/rm -rf "$(LIBDIR)/omain"; \
-	  mv "$(LIBDIR)/$(NAME)" "$(LIBDIR)/o$(NAME)")
-	for i in $(DIRS) compile; do (cd $$i; $(MAKE) install); done
+	@test ! -d "$(DESTDIR)$(LIBDIR)/$(NAME)/Camlp4Parsers" || \
+	 (/bin/rm -rf "$(DESTDIR)$(LIBDIR)/omain"; \
+	  mv "$(DESTDIR)$(LIBDIR)/$(NAME)" "$(DESTDIR)$(LIBDIR)/o$(NAME)")
+	for i in $(DIRS) compile; do \
+	  (cd $$i; $(MAKE) install DESTDIR=$(DESTDIR)); \
+	done
 
 uninstall:
 	rm -rf "$(LIBDIR)/$(NAME)"
