@@ -52,10 +52,10 @@ compare_q_MLast:
 	NAME=$(NAME) ./mk_q_MLast.sh | diff -c q_MLast.ml -
 
 install:
-	-$(MKDIR) "$(LIBDIR)/$(NAME)" "$(BINDIR)"
-	cp $(OBJS) "$(LIBDIR)/$(NAME)/."
-	cp pa_macro.cmi pa_extend.cmi "$(LIBDIR)/$(NAME)/."
-	cp $(NAME)r$(EXE) "$(BINDIR)/."
-	if test -f $(COPT); then cp $(COPT) "$(BINDIR)/."; fi
+	-$(MKDIR) "$(DESTDIR)$(LIBDIR)/$(NAME)" "$(DESTDIR)$(BINDIR)"
+	cp $(OBJS) "$(DESTDIR)$(LIBDIR)/$(NAME)/."
+	cp pa_macro.cmi pa_extend.cmi "$(DESTDIR)$(LIBDIR)/$(NAME)/."
+	cp $(NAME)r$(EXE) "$(DESTDIR)$(BINDIR)/."
+	if test -f $(COPT); then cp $(COPT) "$(DESTDIR)$(BINDIR)/."; fi
 
 include .depend
